--- a/pages/project.html
+++ b/pages/project.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: About
-permalink: "/about/"
+title: Project
+permalink: "/project/"
 image: assets/images/screenshot.png
 ---
 
