--- a/pages/project.html
+++ b/pages/project.html
@@ -1,8 +1,10 @@
 ---
 title: Project
-layout: default
+layout: paget
 permalink: "/project/"
 ---
+
+
 <!-- Home Intro
 ================================================== -->
 {% if page.url == "/" %} 
