--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ background: '/img/bg-index.jpg'
 <div class="rounded mb-5 hero">
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
-      <h1 class="font-weight-bold mb-4 serif-font">인사말 여기</h1>
+      <h1 class="font-weight-bold mb-4 serif-font">인사말 여기 인사말 여기 인사말 여기 인사말 여기</h1>
       <p class="lead mb-4">간단하게 하고 싶은 말은 여기</p>
       <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
     </div>
